// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should toggle size menu 1`] = `
<div>
  <div
    className={null}
  >
    <div
      className="topPlaceholder"
    >
      Place Holder
    </div>
    <div
      className="rightPlaceholder"
    >
      Place Holder
    </div>
    <div
      className="main"
    >
      <div
        className="starRating"
        onClick={[Function]}
      >
        <div
          className="starRating"
        >
          <i
            className="fas fa-star-half"
          />
        </div>
      </div>
      <div
        className="title"
        onClick={[Function]}
      />
      <div
        className="brand"
        onClick={[Function]}
      />
      <div
        className="price"
        onClick={[Function]}
      >
        <strong />
        <span
          className="tab"
        >
          Free Shipping
        </span>
      </div>
      <div
        className="description"
        onClick={[Function]}
      />
      <div
        className="menuBuffer"
        onClick={[Function]}
      />
      <div
        className="sizes"
      >
        <div>
          <strong
            className="darkGrey"
          >
            Fit
          </strong>
            
          <span
            className="small"
          >
            True to size.
          </span>
        </div>
        <div
          className="selectedSize"
          onClick={[Function]}
        >
          <span
            className="smallIndent menuDefault"
          >
            Size
          </span>
          <i
            className="fas fa-angle-down arrow"
          />
        </div>
      </div>
      <div
        className="menuBuffer"
        onClick={[Function]}
      >
         Size Guide
      </div>
      <div
        className="colors"
      >
        <div>
          <div
            className="selectedColor"
            onClick={[Function]}
          >
            <span
              className="smallIndent menuDefault"
            >
              Color
            </span>
            <i
              className="fas fa-angle-down arrow"
            />
          </div>
        </div>
        <div
          className="colorSwatches"
        >
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Black"
              id="Black"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="White"
              id="White"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Blue"
              id="Blue"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Red"
              id="Red"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Green"
              id="Green"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
        </div>
      </div>
      <div
        className="formField"
      >
        <form>
          <input
            className="inputField"
            onChange={[Function]}
            placeHolder="1"
            type="text"
          />
          <div
            className="addButton"
            onClick={[Function]}
          >
            Add to Bag
          </div>
          <div
            className="wishButton"
            onClick={[Function]}
          >
            Add to Wishlist
          </div>
        </form>
      </div>
      <div
        className="bottomDiv"
      >
        Available for pickup in multiple sizes near you.
        <br />
        <div
          style={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          See details
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Should toggle size menu 2`] = `
<div>
  <div
    className={null}
  >
    <div
      className="topPlaceholder"
    >
      Place Holder
    </div>
    <div
      className="rightPlaceholder"
    >
      Place Holder
    </div>
    <div
      className="main"
    >
      <div
        className="starRating"
        onClick={[Function]}
      >
        <div
          className="starRating"
        >
          <i
            className="fas fa-star-half"
          />
        </div>
      </div>
      <div
        className="title"
        onClick={[Function]}
      />
      <div
        className="brand"
        onClick={[Function]}
      />
      <div
        className="price"
        onClick={[Function]}
      >
        <strong />
        <span
          className="tab"
        >
          Free Shipping
        </span>
      </div>
      <div
        className="description"
        onClick={[Function]}
      />
      <div
        className="menuBuffer"
        onClick={[Function]}
      />
      <div
        className="sizes"
      >
        <div>
          <strong
            className="darkGrey"
          >
            Fit
          </strong>
            
          <span
            className="small"
          >
            True to size.
          </span>
        </div>
        <div
          className="menu"
        >
          <div
            className="sizeOption"
            onClick={[Function]}
          >
            <strong
              className="smallIndent"
            >
              Please Choose A Size
            </strong>
          </div>
          <div
            className="sizeOption"
            id="small"
            onClick={[Function]}
          >
            small
          </div>
          <div
            className="sizeOption"
            id="medium"
            onClick={[Function]}
          >
            medium
          </div>
          <div
            className="sizeOption"
            id="large"
            onClick={[Function]}
          >
            large
          </div>
        </div>
      </div>
      <div
        className="menuBuffer"
        onClick={[Function]}
      >
         Size Guide
      </div>
      <div
        className="colors"
      >
        <div>
          <div
            className="selectedColor"
            onClick={[Function]}
          >
            <span
              className="smallIndent menuDefault"
            >
              Color
            </span>
            <i
              className="fas fa-angle-down arrow"
            />
          </div>
        </div>
        <div
          className="colorSwatches"
        >
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Black"
              id="Black"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="White"
              id="White"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Blue"
              id="Blue"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Red"
              id="Red"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
          <svg
            className="circle"
            height="35"
            width="35"
          >
            <circle
              className="backCircle"
              cx="20"
              cy="20"
              fill="black"
              r="15"
              stroke="#e3e4e5"
              strokeWidth="5"
            />
            <circle
              className="frontCircle"
              cx="20"
              cy="20"
              fill="Green"
              id="Green"
              onClick={[Function]}
              r="15"
              stroke="white"
              strokeWidth="4"
            />
          </svg>
        </div>
      </div>
      <div
        className="formField"
      >
        <form>
          <input
            className="inputField"
            onChange={[Function]}
            placeHolder="1"
            type="text"
          />
          <div
            className="addButton"
            onClick={[Function]}
          >
            Add to Bag
          </div>
          <div
            className="wishButton"
            onClick={[Function]}
          >
            Add to Wishlist
          </div>
        </form>
      </div>
      <div
        className="bottomDiv"
      >
        Available for pickup in multiple sizes near you.
        <br />
        <div
          style={
            Object {
              "textDecoration": "underline",
            }
          }
        >
          See details
        </div>
      </div>
    </div>
  </div>
</div>
`;
